// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Bucket/Toolbar/Organize should render children when popover is opened 1`] = `
<div>
  <span
    class="MuiBadge-root"
  >
    <div
      class="makeStyles-root-7"
    >
      <button
        role="button"
      >
        Organize
      </button>
      <div
        aria-hidden="true"
        class="MuiBackdrop-root makeStyles-backdrop-9"
        style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      />
      <div
        class="MuiPaper-root makeStyles-popup-8 MuiPaper-elevation4 MuiPaper-rounded"
      >
        Hello, Popover!
      </div>
    </div>
    <span
      class="MuiBadge-badge makeStyles-badge-6 MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary"
    >
      5
    </span>
  </span>
</div>
`;

exports[`containers/Bucket/Toolbar/Organize should render with selection items 1`] = `
<div>
  <span
    class="MuiBadge-root"
  >
    <div
      class="makeStyles-root-2"
    >
      <button
        class="custom-class"
        role="button"
      >
        Organize
      </button>
      <div
        aria-hidden="true"
        class="MuiBackdrop-root makeStyles-backdrop-4"
        style="opacity: 0; visibility: hidden;"
      />
    </div>
    <span
      class="MuiBadge-badge makeStyles-badge-1 MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary"
    >
      5
    </span>
  </span>
</div>
`;
